# django-docx-footnote

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  test.yml
demos/ckeditor_demo/: admin.py  pyproject.toml  settings.py  urls.py
demos/ckeditor_demo/django_ckeditor_5/static/django_ckeditor_5/src/: ckeditor.js  docxUpload.js
demos/ckeditor_demo/project/: admin.py
demos/ckeditor_demo/project/static/django_ckeditor_5/src/: docxUpload.js
demos/example/: pyproject.toml  settings.py  urls.py
demos/example/project/: admin.py
demos/tinymce_demo/: pyproject.toml  settings.py  urls.py
demos/tinymce_demo/project/: admin.py
demos/tinymce_demo/project/static/js/: tinymce_docx_button.js
django_docx_footnote/admin/: views.py  widgets.py
django_docx_footnote/templates/: footnotes.html
django_docx_footnote/templates/widgets/: docx_upload_widget.html
example/: pyproject.toml
src/django_docx_footnote/: models.py
src/django_docx_footnote/admin/: views.py
src/django_docx_footnote/templates/: footnotes.html
src/django_docx_footnote/templates/widgets/: docx_upload_widget.html
test/: file_with_footnotes.docx
tests/: conftest.py  conftest_settings.py  conftest_urls.py  file_with_footnotes.docx  test_views.py
