[project]
name = "django-docx-footnote"
version = "0.1.0"
description = "Django admin DOCX uploader with footnote processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=4,<5",
    "mammoth==1.11.0",
]
license = {file = "LICENSE"}

[tool.uv.workspace]
members = [
    "demos/example",
    "demos/tinymce",
    "demos/ckeditor",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "ruff>=0.15.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["django_docx_footnote*"]  # Only plugin!
exclude = ["demos*"]        # Demo-only!

[tool.setuptools.package-data]
mypackage = ["django_docx_footnote/templates/*.html"]

